--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bcrypt": "^0.8.5",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.8"
+    "mongoose": "^4.4.8",
+    "morgan": "^1.7.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
